--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-245.6KB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-376.3KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-10.32MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: TWpNNU1qTXhOVEl3TURZdWJXbGpjbTl6YjJaMExtTnZiUQ}
-  - {name: 🇨🇳 中国-450.7KB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3506, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-283.6KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-345.9KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-367.9KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-466.6KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-479.8KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-342.8KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-440.3KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-453.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-358.2KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-2.95MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3506, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-2.24MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3505, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-5.45MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3508, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-914.1KB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇭🇰 香港-414.2KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-878.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-414.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-414.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-414.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-414.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-414.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-414.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-414.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-414.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-878.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
