--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.17MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-4.31MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3505, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-7.69MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3509, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-842.2KB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-466.6KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-430.3KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-431.3KB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇸🇬 新加坡-229.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇺🇸 美国-401.2KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.99MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-311.3KB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3505, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-4.86MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-195.2KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 3025, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-4.66MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 3035, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-335.4KB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3505, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇭🇰 香港-964.4KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: TWpNNU1qTXhOVEl3TURZdWJXbGpjbTl6YjJaMExtTnZiUQ}
+  - {name: 🇨🇳 中国-245.6KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-229.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-229.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-229.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-229.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-229.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-229.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-842.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-430.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-229.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-964.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
